--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -3,21 +3,24 @@
     Layout = "~/Views/Shared/HomePage.cshtml";
 }
 @model IEnumerable<_ExcellOn_.Models.MyCompany>
-
-<!-- inner banner -->
 <div class="inner-banner">
-    <section class="w3l-breadcrumb">
+    <div class="w3l-breadcrumb">
         <div class="container">
-            <h4 class="inner-text-title font-weight-bold text-white mb-sm-3 mb-2">About Us</h4>
+            <h4 class="inner-text-title font-weight-bold text-white mb-sm-3 mb-2">Few Words About Us </h4>
             <ul class="breadcrumbs-custom-path">
-                <li><a href="/">Home</a></li>
-                <li class="active"><span class="fa fa-chevron-right mx-2" aria-hidden="true"></span>About Us</li>
+                <li><a href="/" style="text-decoration: none">Home</a></li>
+                <li>
+                    <span class="fa fa-chevron-right mx-2" aria-hidden="true">
+                    </span>
+                    <span style="font-weight: 700;color:white">
+                        About
+                    </span>
+                </li>
             </ul>
         </div>
-    </section>
+    </div>
 </div>
-<!-- //inner banner -->
-<!-- about section -->
+
 <section class="about-section py-5">
     <div class="container py-lg-5 pt-3">
         <div class="row">
