--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -3,21 +3,24 @@
     Layout = "~/Views/Shared/HomePage.cshtml";
 }
 
-</style>
-
 <div class="inner-banner">
-    <section class="w3l-breadcrumb">
+    <div class="w3l-breadcrumb">
         <div class="container">
-            <h4 class="inner-text-title font-weight-bold text-white mb-sm-3 mb-2">Contact Us</h4>
+            <h4 class="inner-text-title font-weight-bold text-white mb-sm-3 mb-2">Sed ut perspiciatis unde omnis</h4>
             <ul class="breadcrumbs-custom-path">
-                <li><a href="/">Home</a></li>
-                <li class="active"><span class="fa fa-chevron-right mx-2" aria-hidden="true"></span> Contact Us</li>
+                <li><a href="/" style="text-decoration: none">Home</a></li>
+                <li>
+                    <span class="fa fa-chevron-right mx-2" aria-hidden="true">
+                    </span>
+                    <span style="font-weight: 700;color:white">
+                        Contact Us
+                    </span>
+                </li>
             </ul>
         </div>
-    </section>
+    </div>
 </div>
-<!-- //inner banner -->
-<!-- contact page -->
+
 <div class="contact-form py-5">
     <div class="container py-lg-5 py-4">
         <div class="row justify-content-center">
@@ -33,19 +36,19 @@
         </div>
         <div class="mx-auto" style="max-width:1100px">
             <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="contact-address p-4">
+                <div class="col-lg-4 col-md-4">
+                    <div class="contact-address p-4" style="min-height:120px">
                         <div class="contact-icon d-flex align-items-center">
                             <i class="fa fa-map-marker" aria-hidden="true"></i>
                             <div class="ml-3">
                                 <h5 class="contact-text">Visit Us:</h5>
-                                <p>8 Ton That Thuyet </p>
+                                <a>8 Ton That Thuyet </a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
-                    <div class="contact-address p-4">
+                <div class="col-lg-4 col-md-4" >
+                    <div class="contact-address p-4" style="min-height:120px">
                         <div class="contact-icon d-flex align-items-center">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                             <div class="ml-3">
@@ -55,8 +58,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mt-lg-0 mt-4">
-                    <div class="contact-address p-4">
+                <div class="col-lg-4 col-md-4">
+                    <div class="contact-address p-4" style="min-height:120px">
                         <div class="contact-icon d-flex align-items-center">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                             <div class="ml-3">
@@ -86,7 +89,7 @@
                     <textarea class="contact-textarea" name="content" id="content"
                               placeholder="Type your message here" required></textarea>
                     <div class="text-right">
-                        <button class="btn btn-style-white btn-style-primary" style="background-color:red;color:white">Submit Now</button>
+                        <button class="btn btn-primary">Submit Now</button>
                     </div>
                 </form>
             </div>
