--- a/Views/Customer2/MyProfileCustomer.cshtml
+++ b/Views/Customer2/MyProfileCustomer.cshtml
@@ -12,9 +12,9 @@
         <span class="mask" style="opacity:0.6;background-color:black"></span>
         <div class="container-fluid d-flex align-items-center">
             <div class="row">
-                <div class="col-lg-7 col-md-10">
+                <div class="col-lg-12 col-md-12">
                     <h1 class="display-3 text-white" style="font-weight: 500">Hello @Model.Customer_UserName</h1>
-                    <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work and manage your profile or change it</p>
+                    <p class="text-white mt-0 mb-5" style="font-size: 1.5rem">This is your profile page. You can see the progress you've made with your work and manage your profile or change it</p>
                 </div>
             </div>
         </div>
