--- a/Views/Customer2/OrderDetailIndex.cshtml
+++ b/Views/Customer2/OrderDetailIndex.cshtml
@@ -24,7 +24,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-
+    <style>
+        .table td, .table th{
+            font-size: 1.1rem;
+        }
+    </style>
 </head>
 <body>
     <div class="inner-banner">
@@ -39,8 +43,8 @@
         </section>
     </div>
     <!-- Copy toàn bộ thẻ div class container -->
-    <div class="container" style="margin-top: 100px;margin-bottom: 100px">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row" style="padding: 100px">
             <div class="col-12">
                 <div class="text-center">
                     <i class="fa fa-search-plus pull-left icon"></i>
@@ -49,10 +53,10 @@
                 <hr>
                 @foreach (var item in list_order_orderdetail)
                 {
-                    <div class="row" style="font-size: 14px">
+                    <div class="row" style="font-size: 1.1rem">
                         <div class="col-xs-12 col-md-3 col-lg-3">
                             <div class="panel panel-primary" style="min-height: 220px">
-                                <div class="panel-heading">Billing Details</div>
+                                <div class="panel-heading" style="font-weight: 600">Billing Details</div>
                                 <div class="panel-body" style="word-wrap: break-word">
                                     <strong>Customer: </strong><span>@item.Orders.Customer.Customer_Name</span><br>
                                     <strong>Phone: </strong><span>@item.Orders.Customer.Customer_Phone</span><br>
@@ -63,7 +67,7 @@
 
                         <div class="col-xs-12 col-md-3 col-lg-3">
                             <div class="panel panel-success" style="min-height: 220px">
-                                <div class="panel-heading">Company Information</div>
+                                <div class="panel-heading" style="font-weight: 600">Company Information</div>
                                 <div class="panel-body" style="word-wrap: break-word">
                                     <strong>Name: </strong><span>@item.Orders.Customer.Company.Company_Name</span><br>
                                     <strong>Phone: </strong><span>@item.Orders.Customer.Company.Company_Phone</span><br>
@@ -75,7 +79,7 @@
 
                         <div class="col-xs-12 col-md-3 col-lg-3">
                             <div class="panel panel-info" style="min-height: 220px">
-                                <div class="panel-heading">Order Information</div>
+                                <div class="panel-heading" style="font-weight: 600">Order Information</div>
                                 <div class="panel-body" style="word-wrap: break-word">
                                     <strong>Created Date: </strong><span>@item.Orders.Order_DateCreate</span><br>
                                     <strong>Description: </strong><span>@item.Orders.Order_Description </span><br>
@@ -86,7 +90,7 @@
 
                         <div class="col-xs-12 col-md-3 col-lg-3">
                             <div class="panel panel-warning" style="min-height: 220px">
-                                <div class="panel-heading">Payment Information</div>
+                                <div class="panel-heading" style="font-weight: 600">Payment Information</div>
                                 <div class="panel-body" style="word-wrap: break-word">
                                     <strong>Method: </strong><span> Visa/ Mastercard</span><br>
                                     <strong>Bank name: </strong><span> N/A</span><br>
@@ -114,8 +118,8 @@
                                                     <td class="list_item"><strong>Order Start</strong></td>
                                                     <td class="list_item"><strong>Order End</strong></td>
                                                     <td class="list_item"><strong>Number of Staff</strong></td>
-                                                    <td class="list_item"><strong>Price</strong></td>
                                                     <td class="list_item"><strong>Status</strong></td>
+                                                    <td class="list_item"><strong>Price</strong></td>
 
                                                 </tr>
                                             </thead>
@@ -142,7 +146,7 @@
                                                         {
                                                             <td class="list_item_order" style="font-weight: 600">Completed</td>
                                                         }
-                                                        <td>$ @price</td>
+                                                        <td>$@price</td>
                                                     </tr>
                                                 }
                                             </tbody>
@@ -175,6 +179,9 @@
                 }
             </div>
         </div>
+    </div>
+    <div class="container" style="margin-top: 100px;margin-bottom: 100px">
+        
 
     </div>
 
