--- a/Views/Customer2/OrderListIndex.cshtml
+++ b/Views/Customer2/OrderListIndex.cshtml
@@ -67,20 +67,20 @@
                             <td>@item.Id</td>
                             <td>@item.Order_DateCreate</td>
                             <td>@item.Order_Description</td>
-                            <td>@item.Order_TotalCost</td>
+                            <td>$ @item.Order_TotalCost</td>
                             <td style="font-size: 0.8125rem">
                                 @*<span class="status text-success">&bull;</span>@item.OrderDetail_Status*@
                                 @if (item.Order_Status == 0)
                                 {
                                     <span class="badge badge-dot mr-4">
                                         <i class="bg-primary"></i>
-                                        <span style="font-size: 14px"> pending </span>
+                                        <span style="font-size: 14px"> Pending </span>
                                     </span>
                                 }
                                 else if (item.Order_Status == 1)
                                 {
                                     <span class="badge badge-dot mr-4">
-                                        <i class="bg-info"></i>
+                                        <i class="bg-warning"></i>
                                         <span style="font-size: 14px"> Started </span>
                                     </span>
                                 }
@@ -94,7 +94,7 @@
                                 else
                                 {
                                     <span class="badge badge-dot mr-4">
-                                        <i class="bg-warning"></i>
+                                        <i class="bg-dark"></i>
                                         <span style="font-size: 14px"> Deleted </span>
                                     </span>
                                 }
