--- a/Views/Services/detailteam1.cshtml
+++ b/Views/Services/detailteam1.cshtml
@@ -7,7 +7,7 @@
 @model IEnumerable<_ExcellOn_.Models.ResultTeam>
 @foreach (var i in Model.Take(4))
 {
-    <div class="col-md-3 col-sm-6">
+    <div class="col-6 col-md-3">
         <div class="card-container">
             <div class="card">
                 <div class="front">
